[project]
name = "blog-creation-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.2",
    "langchain-google-genai>=4.0.0",
    "langchain-groq>=1.1.0",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.7",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
